[project]
name = "thor"
dynamic = ["version"]
authors = [
  { name = "Joachim Moeyens", email = "moeyensj@uw.edu" },
  { name = "Mario Juric", email = "mjuric@astro.washington.edu" },
  { name = "Spencer Nelson", email = "spencer@b612foundation.org" },
  { name = "Alec Koumjian", email = "alec@b612foundation.org" },
]
description = "Tracklet-less Heliocentric Orbit Recovery"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = "<3.13,>3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["astronomy", "astrophysics", "space", "science", "asteroids", "comets", "solar system"]

dependencies = [
    "adam-core>=0.5.4",
    "adam-assist>=0.3.6",
    "astropy>=5.3.1",
    "astroquery",
    "difi>=2.0rc3",
    "healpy>=1.19.0",
    "jax",
    "numpy",
    "numba",
    "pandas",
    "psutil",
    "pyarrow>=14.0.0",
    "pyyaml>=5.1",
    "quivr>=0.8.1",
    "ray[default]==2.49.1",
    "scikit-learn",
    "scipy",
    "spiceypy",
    "rebound==4.6.0",
    "plotly>=6.5.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
"Documentation" = "https://github.com/moeyensj/thor#README.md"
"Issues" = "https://github.com/moeyensj/thor/issues"
"Source" = "https://github.com/moeyensj/thor"

[project.optional-dependencies]
dev = [
    "black",
    "ipython",
    "jupyter",
    "ipykernel",
    "matplotlib",
    "isort",
    "mypy",
    "pdm",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-doctestplus",
    "pytest-mock",
    "pytest-memray",
    "pytest",
    "ruff>=0.15.4",
    "ipdb>=0.13.13",
]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 110
target-version = "py311"
lint.ignore = []
exclude = ["build"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
python_functions = "test_*"
addopts = "-m 'not (memory or integration)' --ignore=__pypackages__"
markers = [
    "integration: Mark a test as an integration test.",
    "memory: Mark a test as a memory test."
]
[tool.pdm.build]
includes = ["src/thor/"]

[tool.pdm.version]
source = "scm"
write_to = "thor/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm.scripts]
check = { composite = ["lint", "typecheck", "test"] }
format = { composite = ["black ./src/thor", "isort ./src/thor"] }
lint = { composite = [
  "ruff check ./src/thor",
  "black --check ./src/thor",
  "isort --check-only ./src/thor",
] }
fix = "ruff ./src/thor --fix"
typecheck = "mypy --strict ./src/thor"

test = "pytest --benchmark-disable {args}"
doctest = "pytest --doctest-plus --doctest-only"
benchmark = "pytest --benchmark-only"
coverage = "pytest --cov=thor --cov-report=xml --benchmark-disable"

