[metadata]
name = thor
version = file: thor/version.py
author = Joachim Moeyens, Mario Juric
author_email = moeyensj@uw.edu
home_page = https://github.com/moeyensj/thor
description = Tracklet-less Heliocentric Orbit Recovery
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE.md
keywords = astronomy, astrophysics, space, science, asteroids, comets, solar system
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >= 3.7
packages =
    thor
include_package_data = True
setup_requires =
    setuptools >= 45
    wheel
    setuptools_scm >= 6.0
install_requires =
    numpy
    numba
    pandas
    difi
    astropy >= 5.3.1
    astroquery
    scipy
    scikit-learn
    healpy
    tables
    pyyaml >= 5.1
    spiceypy
    matplotlib
    seaborn
    plotly
    ipykernel

[options.extras_require]
tests =
    pytest
    pytest-cov
    pre-commit

[options.package_data]
thor =
    data/*.yaml
    testing/data/*.csv

[aliases]
test=pytest

[tool:pytest]
python_functions = test_*

[isort]
profile = black
skip =
    __init__.py

[black]
line-length = 110

[flake8]
max_line_length = 110
ignore =
    W503
    E203
