[metadata]
name = thor
version = file: thor/version.py
author = Joachim Moeyens, Mario Juric, Spencer Nelson
author_email = moeyensj@uw.edu
home_page = https://github.com/moeyensj/thor
description = Tracklet-less Heliocentric Orbit Recovery
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE.md
keywords = astronomy, astrophysics, space, science, asteroids, comets, solar system
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >= 3.9
packages =
    thor
include_package_data = True
setup_requires =
    setuptools >= 45
    wheel
    setuptools_scm >= 6.0
install_requires =
    adam-core @ git+https://github.com/B612-Asteroid-Institute/adam_core@main
    astropy >= 5.3.1
    astroquery
    difi
    healpy
    jax
    numpy
    numba
    pandas
    pyarrow >= 13.0.0
    pyyaml >= 5.1
    quivr >= 0.7.1
    ray[default]
    scikit-learn
    scipy
    spiceypy

[options.extras_require]
tests =
    pytest
    pytest-cov
    pre-commit

[options.package_data]
thor =
    data/*.yaml
    testing/data/*.csv

[aliases]
test=pytest

[tool:pytest]
python_functions = test_*
addopts = -m "not integration"

[isort]
profile = black
skip =
    __init__.py

[black]
line-length = 110

[flake8]
max_line_length = 110
ignore =
    W503
    E203
